# webserver

./: .clang-format  .clang-uml  .env  .gitignore  .gitmodules  .siegerc  CMakeLists.txt  Doxyfile  Doxyfile.bak  Makefile  README.md  compile_flags.txt  notes.md
.devcontainer/: Dockerfile  devcontainer.json
cgi-bin/: CookiesHandler.py  ForeverLoop.py  default.py  hello_world.sh  loop.sh  see_post_content.sh
configs/: cgi.conf  default.conf  different_hostname.conf  invalid_port.conf  limit_client_body.conf  limit_except_method.conf  multiple_port.conf  multiple_server.conf  nginx_reference.conf  redirect.conf  root_and_alias.conf  routes.conf  same_port.conf  siege.conf  webserv_all_features.conf
doc/: analyze_requests.md  background_knowledge.md  basic_functions.md  colaberate_policy.md  nginx_config.md  non-blocking IO.md  setup-devcontainer.md  setup_linter.md  state_machine.md  test.md  web-kernal-design.md  web-server-architecture.md
html/: AConfigParser_8cpp.html  AConfigParser_8cpp__incl.map  AConfigParser_8cpp__incl.md5  AConfigParser_8hpp.html  AConfigParser_8hpp__dep__incl.map  AConfigParser_8hpp__dep__incl.md5  AConfigParser_8hpp__incl.map  AConfigParser_8hpp__incl.md5  AConfigParser_8hpp_source.html  AHeaderAnalyzer_8hpp.html  AHeaderAnalyzer_8hpp__incl.map  AHeaderAnalyzer_8hpp__incl.md5  AHeaderAnalyzer_8hpp_source.html  ARequestParser_8hpp.html  ARequestParser_8hpp__incl.map  ARequestParser_8hpp__incl.md5  ARequestParser_8hpp_source.html  Acceptor_8cpp.html  Acceptor_8cpp__incl.map  Acceptor_8cpp__incl.md5  Acceptor_8hpp.html  Acceptor_8hpp__dep__incl.map  Acceptor_8hpp__dep__incl.md5  Acceptor_8hpp__incl.map  Acceptor_8hpp__incl.md5  Acceptor_8hpp_source.html  ConfigGlobalBlock_8cpp.html  ConfigGlobalBlock_8cpp__incl.map  ConfigGlobalBlock_8cpp__incl.md5  ConfigGlobalBlock_8hpp.html  ConfigGlobalBlock_8hpp__dep__incl.map  ConfigGlobalBlock_8hpp__dep__incl.md5  ConfigGlobalBlock_8hpp__incl.map  ConfigGlobalBlock_8hpp__incl.md5  (+245 more)
(+292 files in other folders)
